Make sure words dont wrap in nav more menu

--- a/src/scss/blocks/_nav.scss
+++ b/src/scss/blocks/_nav.scss
@@ -97,6 +97,7 @@
 
       > li {
         padding-bottom: get-size('400');
+        white-space: nowrap;
         
         &:hover {
           transform: rotate(-3deg);
